--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,3 +2,9 @@ version: "2"         # required to adjust maintainability checks
 plugins:
   cppcheck:
     enabled: true
+    config:
+      check: all
+      language: c
+      stds:
+        - c11
+      platform: unix64
