--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,7 @@ steps:
   image: alpine
   commands:
   - echo 'wwew'
-  when:
-    event:
-      - promote
+- name: test
+  image: codeclimate/codeclimate
+  commands:
+  - analyze
