--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,7 @@ steps:
   image: alpine
   commands:
   - echo 'wwew'
-- name: test
+- name: test2
   image: codeclimate/codeclimate
   commands:
   - analyze
