--- a/.drone.yml
+++ b/.drone.yml
@@ -7,11 +7,11 @@ steps:
   commands:
   - make
   - echo 'Hello'
-- name: wew
+- name: test2
   image: alpine
   commands:
-  - echo 'wwew'
-- name: test2
-  image: codeclimate/codeclimate
-  commands:
+  - apt-get update
+  - apt-get install curl tar make
+  - curl -L https://github.com/codeclimate/codeclimate/archive/master.tar.gz | tar xvz
+  - cd codeclimate-* && make install
   - codeclimate help
