--- a/.drone.yml
+++ b/.drone.yml
@@ -15,3 +15,5 @@ steps:
   - curl -L https://github.com/codeclimate/codeclimate/archive/master.tar.gz | tar xvz
   - cd codeclimate-* && make install
   - codeclimate help
+  volumes:
+  - /var/run/docker.sock:/var/run/docker.sock
